Importada función de la API

--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -23,8 +23,7 @@
         <div class="h5 font-weight-bold">
             Precio: <span class="text-danger">${{product.price}}</span>
             {% load tag %}
-            <!-- Import convertir function located in tag.py -->
-            {{ convertir product.price as precio_convertido }}
+            {% convertir product.price as precio_convertido %}
             <span class="text-danger">${{precio_convertido}}</span>
         </div>
 
