--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,7 @@
     {% if user.is_authenticated %}
         <a class="nav-item nav-link {% if request.path == logout %}active{% endif %}"" href="{{ logout }}">
             <span class="fas fa-sign-out-alt"></span>
-            Logout
+            Cerrar sesión
   
         </a>
 
@@ -26,7 +26,7 @@
     {% else %}
             <a class="nav-item nav-link {% if request.path == login %}active{% endif %}"" href="{{ login }}">
             <span class="fas fa-user"></span>
-            Login
+            Iniciar sesión
         </a>
         <a class="nav-item nav-link {% if request.path == register %}active{% endif %}" href="{{ register }}">
             <span class="fas fa-user-plus"></span>
