Ingreso de código

--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -19,7 +19,9 @@
     <div class="h1">
     {{product.title}}
     </div>
-
+     <div class="">
+         <p>Código:{{product.id}}</p>
+     </div>
         <div class="h5 font-weight-bold">
             Precio: <span class="text-danger">${{product.price}}</span>
             {% load tag %}
