--- a/products/templates/products/snippets/product.html
+++ b/products/templates/products/snippets/product.html
@@ -10,7 +10,7 @@
             {% endif %}
             <div class="card-body">
               <h4 class="card-title">{{product.title}}</h4>
-              <p class="card-text"> {{product.description }}</p>
+              <!-- <p class="card-text"> {{product.description }}</p> -->
               
             </div>
             <div class="card-footer"> 
