Mejora Código Producto

--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -20,7 +20,7 @@
     {{product.title}}
     </div>
      <div class="">
-         <p>Código:{{product.id}}</p>
+         <p>Código:SNL173489-{{product.id}}</p>
      </div>
         <div class="h5 font-weight-bold">
             Precio: <span class="text-danger">CLP${{product.price}}</span>
