--- a/products/templates/products/snippets/product.html
+++ b/products/templates/products/snippets/product.html
@@ -2,12 +2,7 @@
 
           <!-- Producto en tarjetas-->
           <div class="card text-center h-100">
-            {% if product.image %}
-            <img class="card-img-top" src="{{ product.image.url }}" alt="Card image cap" style=" height: 150px; object-fit: cover;">
-            {% else %}
-            <img class="card-img-top" src="{% static 'images/aimagenot.png' %}" alt="Card image cap" style=" height: 150px; object-fit: cover;">
-
-            {% endif %}
+            <img class="card-img-top" src="{{ product.image.url }}" alt="Imagen" style=" height: 150px; object-fit: cover;">
             <div class="card-body">
               <h4 class="card-title">{{product.title}}</h4>
               <!-- <p class="card-text"> {{product.description }}</p> -->
