--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -9,7 +9,7 @@
 {% if product.image %}
     <img src="{{ product.image.url }}" alt="{{product.title}}" width="200" height="200">
 {% else %}
-    <img class="card-img-top" src="{% static 'images/aimagenot.png' %}" alt="Card image cap" style=" height: 200px; object-fit: cover;">
+    <img class="card-img-top" src="{% static 'images/aimagenot.png' %}" alt="No se ha encontrado la imagen :c" style=" height: 200px; object-fit: cover;">
 {% endif %}
 </div>
 
